methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:7: error: ';' expected but ',' found.
for(x<-1 to 3){(for(y<-1 to 3){faireV();avance(7)})gauche(),avance(7);droite()}
                                                           ^